fixing another spacing issue found from deployment to heroku

--- a/src/components/SideBarPages/MyAccount.css
+++ b/src/components/SideBarPages/MyAccount.css
@@ -78,6 +78,8 @@
 #reviewActions {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #updateUserReview {
